--- a/scrape_test.ipynb
+++ b/scrape_test.ipynb
@@ -123,6 +123,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "query = f'DELETE FROM comments'\n",
+    "\n",
+    "cursor.execute(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for item in text_contents:\n",
     "    query = f'INSERT INTO comments (text_content) VALUES (\"{item}\")'\n",
     "\n",
@@ -182,6 +193,15 @@
     "# Display fetched rows\n",
     "for row in rows:\n",
     "    print(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows"
    ]
   },
   {
