--- a/scrape_test.ipynb
+++ b/scrape_test.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "# Request the page\n",
     "#page = requests.get('https://boards.4chan.org/vt/thread/72706478')\n",
-    "page = requests.get('https://boards.4chan.org/v/thread/672069051')\n",
+    "page = requests.get('https://boards.4chan.org/v/thread/673653330')\n",
     " \n",
     "# Parsing the page\n",
     "# (We need to use page.content rather than \n",
@@ -193,6 +193,25 @@
     "# Display fetched rows\n",
     "for row in rows:\n",
     "    print(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"SELECT text_content FROM comments LIMIT 5\"\n",
+    "cursor.execute(query)\n",
+    "\n",
+    "# Fetch result\n",
+    "rows = cursor.fetchall()\n",
+    "\n",
+    "print(rows)\n",
+    "\n",
+    "# Display fetched rows\n",
+    "for row in rows:\n",
+    "    print(row[0])\n"
    ]
   },
   {
